fix layout overflow on mobile

--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -1,6 +1,6 @@
 .componentGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   grid-gap: 1rem;
 }
 
